fixed alignment for action section
Action section will now stay center on zoom in/out

--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -76,15 +76,7 @@ body {
     font-size: 38px;
     color: #1f2937; 
     font-weight: 900;
-}
-.image-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 10px;
-    max-width: 200px;
-    margin-top: 25px;
-}
+}   
 
 .small-images {
     display: flex;
@@ -128,20 +120,24 @@ body {
 }
 
 .action-section {
+    display: flex;
+    padding: 100px;
+    padding-bottom: 100px;
     padding-left: 128px;
     padding-right: 128px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    justify-content: center;
+    align-items: center;
 
 }
 .action-container {
-    max-width: 850px;
+    max-width: 9000px;
     display: flex;
     padding: 30px 50px;
     justify-content: space-between;
     background-color: #3882f6;
     color: #E5E7EB;
     border-radius: 5px;
+    gap: 50px;
 }
 
 
@@ -170,6 +166,9 @@ body {
 }
 
 footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 30px;
     background-color: #1f2937;
     color: #E5E7EB;
